--- a/SquareSolver/SquareSolver_build_log.html
+++ b/SquareSolver/SquareSolver_build_log.html
@@ -4,18 +4,21 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
 <body>
 <tt>
-Build started on: <u>23-08-2022 at 21:12.22</u><br />
-Build ended on: <u>23-08-2022 at 21:12.22</u><p />
+Build started on: <u>23-08-2022 at 21:30.19</u><br />
+Build ended on: <u>23-08-2022 at 21:30.20</u><p />
 <b>-------------- Build: Debug in SquareSolver (compiler: Use it for projects       = MinGW GCC + Strict)---------------</b><br />
-g++.exe  -c Y:\gthb\SquareSolver\SquareSolver\kvadrach.cpp -o obj\Debug\kvadrach.o -Wall -fexceptions  -g  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC<br />
-Y:\gthb\SquareSolver\SquareSolver\kvadrach.cpp: In function 'double get(char)':<br />
-<font color="#0000ff">Y:\gthb\SquareSolver\SquareSolver\kvadrach.cpp:7:21: warning: 'inp' is used uninitialized in this function [-Wuninitialized]</font><br />
-     scanf("%s", inp);<br />
-                     ^<br />
+g++.exe  -c Y:\gthb\SquareSolver\SquareSolver\main.cpp -o obj\Debug\main.o -Wall -fexceptions  -g  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC<br />
+<font color="#0000ff">Y:\gthb\SquareSolver\SquareSolver\main.cpp:4:6: warning: ISO C++ forbids declaration of 'main' with no type [-Wreturn-type]</font><br />
+ main() {<br />
+      ^<br />
+Y:\gthb\SquareSolver\SquareSolver\main.cpp: In function 'int main()':<br />
+<font color="#0000ff">Y:\gthb\SquareSolver\SquareSolver\main.cpp:17:11: warning: switch missing default case [-Wswitch-default]</font><br />
+     switch(nRoot) {<br />
+           ^<br />
 g++.exe  -o bin\Debug\SquareSolver.exe obj\Debug\kvadrach.o obj\Debug\main.o<br />
-Output size is 291,61 KB<br />
+Output size is 291,64 KB<br />
 <font color="#0000ff">Process terminated with status 0 (0 minutes, 0 seconds)</font><br />
-<font color="#0000ff">0 errors, 1 warnings (0 minutes, 0 seconds)</font><br />
+<font color="#0000ff">0 errors, 2 warnings (0 minutes, 0 seconds)</font><br />
 </tt>
 </body>
 </html>
